[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "networkmanager-openconnect"
description = "Simple and flexible OpenConnect support withinNetworkManager."
license = {text = "MIT"}
authors = [
    {name = "Daniel Bershatsky", email = "d.bershatsky2@skoltech.ru"},
]
readme = {file = "README.md", content-type = "text/markdown"}
version = "0.0.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = ["dbus-python", "pygobject"]
requires-python = ">=3.10,<4"

[project.optional-dependencies]
dev = ["flake8", "isort", "pytest>=7"]

[project.scripts]
nm-openconnect = "nm_openconnect:main"

[project.urls]
Homepage = "https://github.com/daskol/networkmanager-openconnect"
Repository = "https://github.com/daskol/networkmanager-openconnect.git"

[tool.isort]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -m 'not slow'"
testpaths = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools]
include-package-data = false
platforms = ["Linux"]
zip-safe = true
py-modules = ["nm_openconnect"]
